# gds-agents

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  import_data.py  requirements.txt
.github/workflows/: ci.yml  pr-builds.yml
dataset/: london.json
mcp_server/: .mcp.json  README.md  pyproject.toml
mcp_server/src/mcp_server_neo4j_gds/: __init__.py  algorithm_handler.py  centrality_algorithm_handlers.py  centrality_algorithm_specs.py  community_algorithm_handlers.py  community_algorithm_specs.py  gds.py  path_algorithm_handlers.py  path_algorithm_specs.py  registry.py  server.py  similarity_algorithm_handlers.py  similarity_algorithm_specs.py
mcp_server/tests/: __init__.py  conftest.py  test_basic.py  test_basic_tools.py  test_centrality_algorithms.py  test_community_algorithms.py  test_path_algorithms.py  test_similarity_algorithms.py  test_tools.py
