[project]
name = "mcp-server-neo4j-gds"
version = "0.1.0"
description = "Neo4j GDS MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-neo4j-gds = "mcp_server_neo4j_gds:main"