[project]
name = "mcp-server-neo4j-gds"
version = "0.1.0"
description = "Neo4j GDS MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphdatascience>=1.14",
    "fastmcp>=2.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-neo4j-gds = "mcp_server_neo4j_gds:main"

[tool.ruff]
target-version = "py311"

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "pytest>=8.4.1",
]
